<FrameLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/bg_dark"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<android.support.v4.widget.NestedScrollView
    android:layout_margin="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"

        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Username" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:inputType="number"
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Clint_phone" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:id="@+id/input_email"
                android:inputType="textEmailAddress"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:inputType="textPassword"
                android:id="@+id/input_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:inputType="textPassword"
                android:id="@+id/input_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        </android.support.design.widget.TextInputLayout>

        <Button
            android:textColor="@color/sme_black"
            android:id="@+id/btn_register"
                android:background="@drawable/accent_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:visibility="gone"
        android:clickable="true"
        android:id="@+id/loadingSpinner"
        android:elevation="12dp"
        android:background="@color/scrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </FrameLayout>

</FrameLayout>